kube/v1-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: notes-v1
spec:
  type: NodePort
  selector:
    app: notes
    version: v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
