kube/v2-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: notes-v2
spec:
  type: NodePort
  selector:
    app: notes
    version: v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
